[package]
name = "poloniex"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }
tokio = { version = "1.43.0", features = ["full"] }
futures-util = "0.3"
url = "2.4"
serde_json = "1.0"
chrono = "0.4.39"
dotenvy = "0.15.7"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "macros", "postgres"] }
syn = { version = "1.0", features = ["full", "proc-macro", "derive", "printing"] }
